[gd_scene load_steps=6 format=2]

[ext_resource path="res://ColorsHBoxContainer.gd" type="Script" id=1]
[ext_resource path="res://blue-color.png" type="Texture" id=2]
[ext_resource path="res://yellow-color.png" type="Texture" id=3]
[ext_resource path="res://orange-color.png" type="Texture" id=4]
[ext_resource path="res://green-color.png" type="Texture" id=5]

[node name="ColorsHBoxContainer" type="HBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 231.0
margin_bottom = 45.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 12.0
margin_right = 32.0
margin_bottom = 26.0
text = "color"

[node name="BlueButton" type="Button" parent="."]
margin_left = 36.0
margin_right = 80.0
margin_bottom = 38.0
icon = ExtResource( 2 )

[node name="YellowButton" type="Button" parent="."]
margin_left = 84.0
margin_right = 128.0
margin_bottom = 38.0
icon = ExtResource( 3 )

[node name="OrangeButton" type="Button" parent="."]
margin_left = 132.0
margin_right = 176.0
margin_bottom = 38.0
icon = ExtResource( 4 )

[node name="GreenButton" type="Button" parent="."]
margin_left = 180.0
margin_right = 224.0
margin_bottom = 38.0
icon = ExtResource( 5 )
[connection signal="pressed" from="BlueButton" to="." method="_on_BlueButton_pressed"]
[connection signal="pressed" from="YellowButton" to="." method="_on_YellowButton_pressed"]
[connection signal="pressed" from="OrangeButton" to="." method="_on_OrangeButton_pressed"]
[connection signal="pressed" from="GreenButton" to="." method="_on_GreenButton_pressed"]
